--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     .petition-text h2 { text-align:center; font-size:2.2em; margin-top:0; }
     .petition-text ol, .petition-text ul { padding-left:30px; }
     .form-box { margin:60px auto; max-width:800px; border:8px solid #000; background:white; overflow:hidden; }
-    .social-buttons { margin:60px auto; text-align:center; }
-    .social-buttons a { 
-      display:inline-block; margin:20px; padding:18px 50px; 
-      font-size:2em; font-weight:bold; color:#f5d742; background:#000; 
-      text-decoration:none; border:5px solid #000; text-transform:uppercase;
-      transition:0.3s;
-    }
+    .reps-section { background:white; padding:40px; border:8px solid #000; margin:60px auto; max-width:900px; }
+    .reps-section h2 { text-align:center; font-size:2em; }
+    .zip-lookup input { padding:12px; font-size:1.3em; width:220px; border:3px solid #000; }
+    .find-btn { padding:12px 30px; font-size:1.3em; background:#000; color:#f5d742; border:3px solid #000; cursor:pointer; }
+    .find-btn:hover { background:#f5d742; color:#000; }
+    .social-buttons a { display:inline-block; margin:20px; padding:18px 60px; font-size:2em; font-weight:bold; color:#f5d742; background:#000; text-decoration:none; border:5px solid #000; text-transform:uppercase; }
     .social-buttons a:hover { background:#f5d742; color:#000; }
+    .email-template { background:#f9f9f9; padding:25px; margin:30px 0; border-left:6px solid #000; font-size:1.2em; }
     footer { background:#000; color:#f5d742; padding:40px; }
     iframe { width:100%; height:1000px; border:none; }
   </style>
@@ -35,21 +35,15 @@
   <main class="content">
     <img src="NPTSC final.jpg" alt="No Property Tax SC Flag" class="flag">
 
+    <!-- Full Petition Text -->
     <div class="petition-text">
       <h2>South Carolina Petition to Abolish All Property Taxes and Replace Them with a Fair, Broad-Based Revenue System</h2>
-      <p><strong>Title:</strong><br>
-      Abolish Property Taxes in South Carolina – Let South Carolinians Truly Own Their Homes and Businesses</p>
-
+      <p><strong>Title:</strong><br>Abolish Property Taxes in South Carolina – Let South Carolinians Truly Own Their Homes and Businesses</p>
       <p>To the Honorable Members of the South Carolina General Assembly and Governor Henry McMaster:</p>
-
       <p>We, the undersigned residents and taxpayers of South Carolina, respectfully demand the complete and permanent abolition of all ad valorem property taxes on real estate and personal property in our state.</p>
-
       <p>For far too long, South Carolinians have been forced to pay an annual ransom to government simply to keep what we have worked a lifetime to own. A tax on property is not a tax on luxury—it is a tax on existence. It punishes families for putting down roots, seniors for staying in the homes they raised their children in, farmers for feeding our state, and small businesses for creating jobs. It drives retirees out of South Carolina and discourages new families and employers from moving in.</p>
-
       <p>No citizen of a free state should ever face the threat of a tax lien or forced sale of their home because they fell behind on an arbitrary government bill tied to the assessed value of their property rather than their ability to pay.</p>
-
       <p>We recognize that schools, public safety, roads, and local services must be funded. Therefore, we call on the General Assembly to:</p>
-
       <ol>
         <li>Permanently eliminate all property taxes on owner-occupied homes, rental properties, commercial buildings, farms, and personal property.</li>
         <li>Replace the lost revenue through a combination of:
@@ -62,25 +56,40 @@
         </li>
         <li>Place a binding constitutional amendment on the next general election ballot to prohibit any future legislature from re-imposing property taxes without a two-thirds supermajority vote of both houses and approval by the people in a statewide referendum.</li>
       </ol>
-
-      <p>South Carolina already has one of the lowest property tax burdens in America—yet we still collect billions every year while our people live in fear of the next reassessment. It is time to finish the job. Nine states thrive without a personal income tax; it is past time for South Carolina to become the first state in the Southeast to free its citizens from property taxation entirely.</p>
-
-      <p>We, the undersigned, declare that ownership is not a privilege to be rented from the government—it is a right. We will remember at the ballot box which elected officials stand with the people and which stand with the tax collectors.</p>
-
-      <p><strong>Let South Carolina lead the nation once again.<br>
-      Abolish property taxes now.<br>
-      Make South Carolina the True Property Tax-Free State.</strong></p>
-
+      <p>South Carolina already has one of the lowest property tax burdens in America—yet we still collect billions every year while our people live in fear of the next reassessment. It is time to finish the job.</p>
+      <p>We, the undersigned, declare that ownership is not a privilege to be rented from the government—it is a right.</p>
+      <p><strong>Let South Carolina lead the nation once again.<br>Abolish property taxes now.<br>Make South Carolina the True Property Tax-Free State.</strong></p>
       <p><strong>We demand action in the 2026 legislative session.</strong></p>
     </div>
 
+    <!-- Petition Form -->
     <div class="form-box">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" frameborder="0">Loading petition…</iframe>
     </div>
 
+    <!-- Find Your Reps + Email Template -->
+    <div class="reps-section">
+      <h2>Contact Your State Representatives</h2>
+      <p>Find your House and Senate reps by ZIP code. Tell them: “I oppose property taxes — vote to abolish them in 2026!”</p>
+      <div class="zip-lookup">
+        <input type="text" id="zipInput" placeholder="Enter ZIP Code (e.g. 29201)" class="zip-input">
+        <button onclick="findReps()" class="find-btn">Find My Reps</button>
+      </div>
+      <div id="repsResult"></div>
+
+      <div class="email-template">
+        <h3>Pre-Written Email Template (just copy & paste)</h3>
+        <p><strong>Subject:</strong> Abolish Property Taxes in SC – Vote YES in 2026</p>
+        <p>Dear [Representative/Senator Name],</p>
+        <p>As your constituent in [Your City/Zip], I demand you support the complete abolition of property taxes in South Carolina. This regressive tax destroys families and businesses. I signed the official petition at NoPropertyTaxSC.com and expect you to vote YES on the 2026 constitutional amendment to end property taxes forever.</p>
+        <p>Sincerely,<br>[Your Full Name]<br>[Your City/Zip]</p>
+      </div>
+    </div>
+
+    <!-- Social Buttons -->
     <div class="social-buttons">
-      <a href="https://x.com/nopropertytaxsc" target="_blank">X</a>
-      <a href="https://www.instagram.com/nopropertytaxsc/" target="_blank">Instagram</a>
+      <a href="https://x.com/nopropertytaxsc" target="_blank">Follow on X</a>
+      <a href="https://www.instagram.com/nopropertytaxsc/" target="_blank">Follow on Instagram</a>
     </div>
 
   </main>
@@ -90,6 +99,19 @@
        A grassroots movement to abolish property tax in SC<br>
        Every signature is stored securely • Contact: nopropertytaxsc@gmail.com</p>
   </footer>
+
+  <script>
+    function findReps() {
+      const zip = document.getElementById('zipInput').value.trim();
+      if (!zip || zip.length !== 5 || isNaN(zip)) {
+        document.getElementById('repsResult').innerHTML = '<p style="color:red;">Please enter a valid 5-digit ZIP code.</p>';
+        return;
+      }
+      const url = `https://www.scstatehouse.gov/legislatorssearch.php?zip=${zip}`;
+      window.open(url, '_blank');
+      document.getElementById('repsResult').innerHTML = '<p>Opening official lookup in new tab...<br>Your reps\' names, phone numbers, and emails will appear there. Use the template above!</p>';
+    }
+  </script>
 
 </body>
 </html>
